# clip_translate

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: codebase_structure.md  development_commands.md  project_overview.md  style_and_conventions.md  task_completion_checklist.md
src/clip_translate/: __init__.py  cli.py  config.py  core.py  engines.py  gui.py  settings_dialog.py
tests/: conftest.py  test_core.py
